[package]
name = "chebyshev-engine"
version = "0.1.0"
edition = "2024"
description = "A production-grade, high-performance Chebyshev filter library"

[features]
default = ["std"]
std = ["num-traits/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
libm = "0.2"
hound = "3.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "filter_bench"
harness = false

[[bin]]
name = "chebyshev-cli"
path = "src/bin/main.rs"

[lib]
name = "chebyshev_engine"
path = "src/lib.rs"
